--- a/index.html
+++ b/index.html
@@ -1,26 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Ecommerce</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="general">
-        <div class="Navbar"></div>
-        <div class="Aside"></div>
-        <div class="Footer"></div>
-        <div class="Productos">
-          <div class="p1"></div>
-          <div class="p2"></div>
-          <div class="p3"></div>
-          <div class="p4"></div>
-          <div class="p5"></div>
-          <div class="p6"></div>
+      <div class="Navbar">
+        <h1>Mi Ecommerce</h1>
+      </div>
+
+      <div class="Aside">
+        <div class="Aside-title"><h3>Categorías</h3></div>
+
+        <div class="Aside-ul">
+          <ul>
+            <li>Perfumes <span class="cant">(34)</span></li>
+            <li>Ropa <span class="cant">(22)</span></li>
+            <li>Accesorios <span class="cant">(12)</span></li>
+            <li>Zapatos <span class="cant">(10)</span></li>
+          </ul>
         </div>
       </div>
 
-    
-</body>
+      <div class="Footer">
+        <p>Daniel@miecommerce</p>
+      </div>
+      <div class="Productos">
+        <div class="item">
+          <img src="./assets/img/perfume1.png" alt="">
+          <h2>Perfume myKingdom</h2>
+          <p>31.400</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="./assets/img/perfume2.png" alt="">
+          <h2>Perfume Phantom</h2>
+          <p>31.400</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="./assets/img/zapatos.png" alt="">
+          <h2>Zapatos Docker</h2>
+          <p>31.400</p>
+          <button>Comprar</button>
+        </div>
+        <div class="item">
+          <img src="./assets/img/poleron.png" alt="">
+          <h2>Poleron Puma</h2>
+          <p>31.400</p>
+          <button>Comprar</button>
+        </div>
+
+
+      </div>
+    </div>
+  </body>
 </html>
